fixed portfolio images bug where the thumbnails and button shifted upwards after closing the fancybox window

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 
+
 .overlay{
   width: 100%;
   height: 100%;
@@ -144,6 +145,7 @@
 }
 .itemsContainer {
   width: 100%;
+  margin-top: 50px;
 }
 .itemsContainer .items{
   padding-left: 0;
@@ -163,28 +165,58 @@
 }
 .items .icons{
   position: absolute;
-  width: 90px;
+  width: 100%;
   height: 40px;
-  left: 50%;
-  top: 50%;
-  margin: -20px auto 0 -47px;
+  bottom: 20%;
+  margin: 0 auto;
   text-align: center;
   z-index: 3;
   display: inline-block;
+
+  -webkit-transition: all 0.2s linear,0.3s;
+  -moz-transition: all 0.2s linear,0.3s;
+  -o-transition: all 0.2s linear,0.3s;
+  -ms-transition: all 0.2s linear,0.3s;
+  -transition: all 0.2s linear,0.3s;
 }
-.items a{
+.item .description{
+position: absolute;
+width: 100%;
+height: 40px;
+top: 25%;
+float: right;
+right: -275px;
+margin: 0 auto;
+text-align: center;
+z-index: 3;
+display: inline-block;
+
+-webkit-transition: all 0.2s linear,0.3s;
+-moz-transition: all 0.2s linear,0.3s;
+-o-transition: all 0.2s linear,0.3s;
+-ms-transition: all 0.2s linear,0.3s;
+-transition: all 0.2s linear,0.3s;
+}
+.item .description h4{
+  font-size: 2vw;
+  padding: 5px;
+}
+
+.item .description p{
+  font-size: 1vw;
+  padding: 5px;
+}
+.items .item a{
   background-color: #DC3522;
-  border-radius: 3px;
-  width: 40px;
-  height: 40px;
+  color: #fff;
+  text-align: center;
+  /* text-decoration:; */
+  padding-top: 3px;
+  border-radius: 20px;
+  width: 120px;
+  height: 30px;
   position:relative;
   display: inline-block;
-
-  -webkit-transition: all 0.2s linear,0.2s;
-  -moz-transition: all 0.2s linear,0.2s;
-  -o-transition: all 0.2s linear,0.2s;
-  -ms-transition: all 0.2s linear,0.2s;
-  -transition: all 0.2s linear,0.2s;
 
 }
 .items .icons i{
@@ -208,6 +240,7 @@
   -transition: all 0.2s linear,0.5s;
 
 }
+
 .items .item:hover img{
   -webkit-transform: scale(1.05,1.05);
   -moz-transform: scale(1.05,1.05);
@@ -215,19 +248,15 @@
   -ms-transform: scale(1.05,1.05);
   -transform: scale(1.05,1.05);
 }
-.items .openButton{
+.items .icons{
   float: left;
-  left: -200px
+  left: -300px;
 }
-.items .videoLink{
-  float: right;
-  right: -200px;
-}
-.items .item:hover .openButton{
-  left: 0px;
-}
-.items .item:hover .videoLink{
+.items .item:hover .description{
   right: 0px;
+}
+.items .item:hover .icons{
+  left: 0px;
 }
 .items .item:hover .imageOverlay{
   opacity: 1;
@@ -247,6 +276,7 @@
   border: 1.5px  solid black;
   border-radius: 3px;
   padding: 10px 18px;
+  text-decoration: none;
 }
 .filter li{
   display: inline-block;
